# files

./: 2013工作记录.txt  auto_update_devices.sh
wordpress/Geeker-One_v1.0/Geeker-One/: footer.php  sidebar.php  single.php
wordpress/Unite主题3.0版本/Unite/: archive.php  blog.php  cms.php  footer.php  functions.php  style.css
wordpress/erlsimple/: category.php  comments-ajax.php  comments.php  content.php  footer.php  functions.php  header.php  index.php  sidebar.php  style.css
wordpress/erlsimple/includes/: author_status.php  bgbanner.php  theme-options.php
wordpress/erlsimple/js/: common.js  common_scroll.js
wordpress/erlsimple/template/: friendlinks.php
wordpress/wordpress1/wordpress74/: .htaccess  author.php  category.php  description.php  footer.php  functions.php  header.php  index.php  page.php  sidebarIndex.php  single.php  style.css
yibo/: deploy_env.sh  fuel_auto_new.py  fuelclient_auto_new.py  get_tempest_conf.py  ll.txt  quota.sh  yapf.bat
yibo/dashboards/: Dockerfile  requirements.txt
yibo/dashboards/dashboards/: settings.py  urls.py  wsgi.py
yibo/dashboards/jenkins_analyze/: email_send.py  jenkins_analysis.py  models.py  (+1 more)
yibo/sf/: sf_action1.py
yibo/tac/: AUTHORS  ChangeLog  README.md  customer.conf  requirements.txt  setup.cfg  sf_config-generator.tempest.conf
yibo/tac/tac/: auto_config.py  customers.py  generator.py  openstack.py  values.py  valuess.py
yibo/tac/tac/tests/: __init__.py  test_openstack.py
yibo/tempest/: .gitignore  requirements.txt  setup.cfg  tox.ini
yibo/tui/: db.sqlite3  get_tempest_conf_v_2_0.py  manage.py  t
(+201 files in other folders)
